# prolog

./: LICENSE  README.md  prolog.cabal  stack.yaml
app/: Main.hs
src/: Prolog.hs
src/Prolog/: Parser.hs
