name:                prolog
version:             0.1.0.0
synopsis:            prolog interpreter in haskell
description:         Please see README.md
homepage:            https://github.com/sdemos/prolog#readme
license:             MIT
license-file:        LICENSE
author:              Stephen Demos
maintainer:          stphndemos@gmail.com
copyright:           2016 Stephen Demos
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Prolog
  build-depends:       base
                     , megaparsec
  default-language:    Haskell2010

executable prolog-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , prolog
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sdemos/prolog
